single page category gap fix and releated post below flex fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,11 @@ body a{
     flex-wrap: wrap;
     align-items: center;
 }
+.sing_post_main_parent .post_content .author_and_cates .category_parent{
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+}
 .sing_post_main_parent .post_content .author_and_cates .category_parent a{
     background: var(--lawgicaladda_color);
     color: #fff;
@@ -466,11 +471,12 @@ body a{
     background-color: #fff;
 }
 .related_posts_grand_parent .related_post_parent .related_post_child{
-    flex-basis: calc(25% - 10px);
+    flex-basis: calc(25% - 7.5px);
 }
 .related_posts_grand_parent .related_post_parent .related_post_child .recent_img_container{
-    max-width: 500px;
-    max-height: 500px;
+    width: 100%;
+    max-height: 200px;
+    overflow: hidden;
 }
 .related_posts_grand_parent .related_post_parent .related_post_child .recent_img_container img{
     object-fit: cover;
@@ -502,12 +508,8 @@ body a{
 }
 
 @media screen and (max-width: 999px) {
-    .related_posts_grand_parent .related_post_parent{
-        flex-wrap: wrap;
-        justify-content: center;
-    }
     .related_posts_grand_parent .related_post_parent .related_post_child{
-        flex-basis: calc(50% - 10px);
+        flex-basis: calc(50% - 5px);
     }
 }
 @media screen and (max-width: 319px) {
